PLT-7320 - Fixing alignment of x icon

--- a/webapp/sass/layout/_post.scss
+++ b/webapp/sass/layout/_post.scss
@@ -942,6 +942,14 @@
                 border-color: $yellow;
             }
         }
+
+        .attachment {
+            .attachment__body__wrap {
+                .btn-close {
+                    left: -11px;
+                }
+            }
+        }
     }
 
     &.same--root {
